1. 아이디 / 비밀번호 찾기 구현
2. application.properties에 sendpass.jpg 추가(비밀번호 찾기 메일발송시 이미지 파일)

--- a/PET/src/main/resources/application.properties
+++ b/PET/src/main/resources/application.properties
@@ -28,6 +28,7 @@ logging.level.com.Pet_Topia.Pet_Topia=info
 
 my.savefolder=c:/upload
 my.sendfile=c:/image/welcome.jpg
+my.sendpass=c:/image/pass.jpg
 
 
 spring.mail.host=smtp.naver.com
