product 관련 프론트 작업

--- a/PET/src/main/resources/application.properties
+++ b/PET/src/main/resources/application.properties
@@ -21,6 +21,7 @@ mybatis.mapper-locations=classpath:/com/Pet_Topia/mybatis/mapper/*.xml
 # mapper log print
 logging.level.root=info
 logging.level.com.Pet_Topia.mybatis.mapper.MemberMapper=trace
+logging.level.com.Pet_Topia.mybatis.mapper.ProductMapper=trace
 logging.level.com.Pet_Topia.mybatis.mapper.CommunityMapper=trace
 logging.level.com.Pet_Topia.mybatis.mapper.Community_comm_Mapper=trace
 logging.level.com.Pet_Topia.Pet_Topia=info 
