--- a/PET/src/main/resources/application.properties
+++ b/PET/src/main/resources/application.properties
@@ -45,11 +45,5 @@ spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
 
 
-
-
-
-
-
-
-
-
+#return JsonObject
+spring.mvc.converters.preferred-json-mapper=gson
