--- a/PET/src/main/resources/application.properties
+++ b/PET/src/main/resources/application.properties
@@ -25,6 +25,7 @@ logging.level.com.Pet_Topia.mybatis.mapper.ProductMapper=trace
 logging.level.com.Pet_Topia.mybatis.mapper.Askapper=trace
 logging.level.com.Pet_Topia.mybatis.mapper.CommunityMapper=trace
 logging.level.com.Pet_Topia.mybatis.mapper.Community_comm_Mapper=trace
+logging.level.com.Pet_Topia.mybatis.mapper.OrderMapper=trace
 logging.level.com.Pet_Topia.Pet_Topia=info 
 
 
