--- a/PET/pom.xml
+++ b/PET/pom.xml
@@ -17,6 +17,28 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+	
+	 <dependency>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi-ooxml</artifactId>
+		<version>4.1.0</version>
+		 </dependency>
+		  
+		  <dependency>
+		<groupId>com.github.librepdf</groupId>
+		<artifactId>openpdf</artifactId>
+		<version>1.3.8</version>
+		 </dependency>
+		 
+		
+		
+	
+	
+	
+	
+	
+	
+	
 	      <!-- 스프링 시큐리티 tag 라이브러리 -->
 	   <dependency>
 	      <groupId>org.springframework.security</groupId>
@@ -91,15 +113,6 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
-		<!-- json 변환 -->
-		<dependency>
-		  <groupId>com.google.code.gson</groupId>
-		  <artifactId>gson</artifactId>
-		  <version>2.8.6</version>
-		</dependency>
-		
 	</dependencies>
 
 	<build>
