--- a/PET/src/main/resources/application.properties
+++ b/PET/src/main/resources/application.properties
@@ -21,9 +21,9 @@ mybatis.mapper-locations=classpath:/com/Pet_Topia/mybatis/mapper/*.xml
 # mapper log print
 logging.level.root=info
 logging.level.com.Pet_Topia.mybatis.mapper.MemberMapper=trace
-logging.level.com.Pet_Topia.mybatis.mapper.ProductMapper=trace
 logging.level.com.Pet_Topia.mybatis.mapper.CommunityMapper=trace
 logging.level.com.Pet_Topia.mybatis.mapper.Community_comm_Mapper=trace
+logging.level.com.Pet_Topia.mybatis.mapper.AdminMapper=trace
 logging.level.com.Pet_Topia.Pet_Topia=info 
 
 
@@ -42,6 +42,8 @@ spring.mail.properties.mail.smtp.auth=true
 
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
+
+
 
 
 
