--- a/PET/pom.xml
+++ b/PET/pom.xml
@@ -17,6 +17,9 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+	
+		
+		
 	   <dependency>
 		<groupId>org.apache.poi</groupId>
 		<artifactId>poi-ooxml</artifactId>
@@ -28,7 +31,6 @@
 		<artifactId>openpdf</artifactId>
 		<version>1.3.8</version>
 		 </dependency>
-	   
 	   
 	   
 	   
@@ -121,6 +123,16 @@
 		    <artifactId>gson</artifactId>
 		    <version>2.8.6</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>com.googlecode.json-simple</groupId>
+    		<artifactId>json-simple</artifactId>
+    		<version>1.1.1</version>
+		</dependency>
+		
+
+		
+		
 		
 	</dependencies>
 
