--- a/PET/pom.xml
+++ b/PET/pom.xml
@@ -136,7 +136,10 @@
     		<version>2.13.4</version>
 		</dependency>
 		
-		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 		
 		
 	</dependencies>
